LATEST 
----------------------------------
- avoid collapse of navigation tree on element removal (#31)
- avoid removal of class figure on move of class
- drag and drop attributes (#29)

UML-Editor 3.7.3 (2020-05-04) 
----------------------------------
- export ili file as UTF-8 encoded (#32)
- ili2c-5.1.1

UML-Editor 3.7.2 (2020-03-02) 
----------------------------------
- iliimport: extend trace output (#28)
- fails to import EXTENDED attr without type (#28)
- ili2c-5.0.8


UML-Editor 3.7.1 (2020-03-02) 
----------------------------------
- fix commit f6365559fc5ff7b3603e2524255a0367a0e87d08
- GeoIV-ID wird nicht exportiert (#27)
- fix program version in about dialog
- Write models of the IMPORTS-statement in a defined order (#26)
- Write topics of the DEPENDS-statement in a defined order
- ili2c-5.0.6

UML-Editor 3.7.0 (2018-12-28) 
----------------------------------
- navigation view: enable drag and drop
- navigation view: new function to export a single ili file
- AttributeDef UI: enable to edit EPSG code
- DomainDef UI: enable to edit EPSG code
- UI: set default filter in file selection dialogs
- UI: enable ESCAPE key in dialogs
- UI: enable search button
- new function to export model as XMI file
- new function to import a translation XML
- new function to export a translation XML
- ili2c-4.7.11
- replace use of 'sun' packages

UML-Editor 3.6.2 (2015-12-23) 
----------------------------------
- improved label "Language of model presentation"
- removed accuracy combobox from AREA/SURFACE panel
- iliimp: import GENERIC
- ili2c-4.5.20

UML-Editor 3.6.1 (2015-01-30) 
----------------------------------
- bug iliexp: failed to sort ModelDef inside one ili-file according to dependencies/imports
- ili2c-4.5.7

UML-Editor 3.6.0 (2014-12-30) 
----------------------------------
- iliimp: unwrap multivalue struct attrs to normal uml attrs
- iliimp: import interlis struct attrs as uml attrs