@@ -2,7 +2,8 @@ LATEST
 ----------------------------------
 - avoid collapse of navigation tree on element removal (#31)
 - avoid removal of class figure on move of class
-- drag and drop attributes (#29)
+- support drag and drop of attributes (#29)
+- support drag and drop of enumeration elements (#30)
 
 UML-Editor 3.7.3 (2020-05-04) 
 ----------------------------------
